tests/Error/YS03xx/YS0301.ys
a == 10 # Variable a is not defined
